[package]
name = "fawkes-rollup"
version = "0.1.1"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.4"
num = "0.2.1"


[dependencies.bellman]
version = "0.3.1"
package = "bellman_ce"


[dependencies.ff]
version = "0.7"
features = ["derive"]
package = "ff_ce"


[dependencies.pairing]
version = "0.18.0"
package = "pairing_ce"

[dependencies.fawkes_crypto]
version = "0.2.3"
path = "../fawkes-crypto"
package = "fawkes-crypto"

[dependencies.sapling_crypto]
version = "0.1.2"
package = "sapling-crypto_ce" 